# serde_alias

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: de_camel_pascal.rs  enum.rs  it_panics_on_invalid_de_casing.rs
tests/ui/: unknown_de_casing.rs  unknown_de_casing.stderr
