[package]
name = "serde_alias"
version = "0.0.2"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
keywords = ["proc_macro", "procmacro", "serde", "alias", "serde-alias"]
description = "An attribute macro to apply serde aliases to all struct fields"
repository = "https://github.com/petar-dambovaliev/serde_alias"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-error = "1.0"
convert_case = "0.4.0"

[dev-dependencies]
futures = "0.3.5"
trybuild = "1.0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

